@@ -223,7 +223,7 @@ var inputs = {
     {
       'm': m
     },
-    val: 1000
+    val: 10000
   },
   P_optical:
   {
@@ -420,7 +420,7 @@ var outputs = {
   },
   L0_distance_to_spot_size_equals_sail_size:
   {
-    label: 'Accel Dist &equiv; L<sub>0</sub>',
+    label: 'Accel Dist at L<sub>0</sub>',
     unit:
     {
       au: au,
@@ -433,7 +433,7 @@ var outputs = {
   },
   t0_time_to_L0:
   {
-    label: 'Time to &equiv; L<sub>0</sub>',
+    label: 'Time to L<sub>0</sub>',
     unit:
     {
       d: d,
@@ -447,7 +447,7 @@ var outputs = {
   },
   v_0_speed_to_L0:
   {
-    label: 'Speed at &equiv; L<sub>0</sub>',
+    label: 'Speed at L<sub>0</sub>',
     unit:
     {
       'km/s': ( km / s ),
@@ -461,7 +461,7 @@ var outputs = {
   },
   l0_ke:
   {
-    label: 'Kinetic Energy at &equiv; L<sub>0</sub>',
+    label: 'Kinetic Energy at L<sub>0</sub>',
     unit:
     {
       'GW*hr': ( GW * hr ),
@@ -474,7 +474,7 @@ var outputs = {
   },
   E_gamma_photon_energy_in_main_beam_to_time_t0:
   {
-    label: 'Laser Energy in Main Beam at &equiv; L<sub>0</sub>',
+    label: 'Laser Energy in Main Beam at L<sub>0</sub>',
     unit:
     {
       'GW*hr': ( GW * hr ),
@@ -487,7 +487,7 @@ var outputs = {
   },
   E_elec_total_electrical_energy_used_to_t0:
   {
-    label: 'Electrical Energy at &equiv; L<sub>0</sub>',
+    label: 'Electrical Energy at L<sub>0</sub>',
     unit:
     {
       'GW*hr': ( GW * hr ),
@@ -500,7 +500,7 @@ var outputs = {
   },
   launch_efficiency_at_L0:
   {
-    label: 'Launch Efficiency at &equiv; L<sub>0</sub> (KE / Electrical Energy)',
+    label: 'Launch Efficiency at L<sub>0</sub> (KE / Electrical Energy)',
     unit:
     {
       '%': 1 / 100
@@ -512,7 +512,7 @@ var outputs = {
   },
   energy_cost_per_launch:
   {
-    label: 'Electrical Energy Cost at &equiv; L<sub>0</sub>',
+    label: 'Electrical Energy Cost at L<sub>0</sub>',
     unit:
     {
       '$': 1
@@ -524,7 +524,7 @@ var outputs = {
   },
   energy_storage_cost_per_launch:
   {
-    label: 'Energy Storage Cost at &equiv; L<sub>0</sub>',
+    label: 'Energy Storage Cost at L<sub>0</sub>',
     unit:
     {
       '$': 1
